--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       
       <div class="form-group">
         <label for="thingsToSay">Things To Say</label>
-        <textarea class="form-control" id="thingsToSay" rows="3">ho, yes</textarea>
+        <textarea class="form-control" id="thingsToSay" rows="3">no, yes</textarea>
       </div>
       <div class="form-group">
         <label for="probability">Probability of my Participation in Network</label>
